--- a/templates/Mocha.xml
+++ b/templates/Mocha.xml
@@ -1,6 +1,9 @@
 <templateSet group="Mocha">
   <template name="mocfile" value="const expect = require('chai').expect;&#10;&#10;describe('$unitDescription$', ()=&gt;{&#10;    beforeEach(()=&gt;{&#10;    });&#10;    &#10;    afterEach(()=&gt;{&#10;    });&#10;    &#10;    it('$scenarioDescription$', ()=&gt;{&#10;        $END$&#10;    });&#10;});" description="Mocha Test File Scaffold" toReformat="true" toShortenFQNames="true">
-    <variable name="unitDescription" expression="Some Unit Under Test" defaultValue="" alwaysStopAt="true" />
-    <variable name="scenarioDescription" expression="should do something" defaultValue="" alwaysStopAt="true" />
+    <variable name="unitDescription" expression="&quot;Some Unit Under Test&quot;" defaultValue="" alwaysStopAt="true" />
+    <variable name="scenarioDescription" expression="&quot;should do something&quot;" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
   </template>
 </templateSet>
