--- a/templates/Mocha.xml
+++ b/templates/Mocha.xml
@@ -1,7 +1,19 @@
 <templateSet group="Mocha">
-  <template name="mocfile" value="const expect = require('chai').expect;&#10;&#10;describe('$unitDescription$', ()=&gt;{&#10;    beforeEach(()=&gt;{&#10;    });&#10;    &#10;    afterEach(()=&gt;{&#10;    });&#10;    &#10;    it('$scenarioDescription$', ()=&gt;{&#10;        $END$&#10;    });&#10;});" description="Mocha Test File Scaffold" toReformat="true" toShortenFQNames="true">
-    <variable name="unitDescription" expression="&quot;Some Unit Under Test&quot;" defaultValue="" alwaysStopAt="true" />
-    <variable name="scenarioDescription" expression="&quot;should do something&quot;" defaultValue="" alwaysStopAt="true" />
+  <template name="mocfile" value="const chai = require('chai');&#10;const expect = chai.expect;&#10;&#10;describe('$TESTDESCRIPTION$', ()=&gt;{&#10;    it('$SCENARIODESCRIPTION$', ()=&gt;{&#10;        $END$&#10;    });&#10;});" description="Mocha Chai Test Template" toReformat="true" toShortenFQNames="true">
+    <variable name="TESTDESCRIPTION" expression="&quot;Test Description&quot;" defaultValue="" alwaysStopAt="true" />
+    <variable name="SCENARIODESCRIPTION" expression="&quot;it should do something&quot;" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
+  <template name="mocit" value="it('$SCENARIODESCRIPTION$', ()=&gt;{&#10;    $END$&#10;});" description="Mocha 'it'" toReformat="true" toShortenFQNames="true">
+    <variable name="SCENARIODESCRIPTION" expression="&quot;it should do something&quot;" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
+  <template name="mocdesc" value="describe('$DESCRIBE$', ()=&gt;{&#10;    $END$&#10;});" description="Mocha 'describe'" toReformat="true" toShortenFQNames="true">
+    <variable name="DESCRIBE" expression="&quot;DESCRIPTION&quot;" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
