WS-2017.3 <jacques@jacques-pc Update JavaScript.xml, _@user_Darcula.icls

--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -100,4 +100,10 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
+  <template name="dir" value="console.dir($OBJECT$, {depth:null, colors:true});" description="Console dir (with colours)" toReformat="false" toShortenFQNames="true">
+    <variable name="OBJECT" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
 </templateSet>
