--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -106,4 +106,19 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
+  <template name="todo" value="// TODO: $NOTE$&#10;$END$" description="TODO Comment" toReformat="true" toShortenFQNames="true">
+    <variable name="NOTE" expression="" defaultValue="&quot;Something is still to be done here&quot;" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
+  <template name="a=&gt;" value="let $NAME$ = async ($PARAMS$) =&gt; { &#10;  return $END$;&#10;};" description="Async ES6 arrow function" toReformat="false" toShortenFQNames="true">
+    <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="PARAMS" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JSX_HTML" value="false" />
+      <option name="JS_EXPRESSION" value="false" />
+    </context>
+  </template>
 </templateSet>
